# flutter-embedder-minimal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/common/: constants.h
src/flutter/: flutter_runner.cc  flutter_runner.h
src/wayland/: egl_shell.cc  egl_shell.h  wayland_display.cc  wayland_display.h
